applications/backend/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: applications

spec:
  selector:
    app: backend

  ports:
  - port: 80
    targetPort: 8000

  type: ClusterIP
