applications/backend/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: backend-ingress
  namespace: applications

spec:
  ingressClassName: traefik

  rules:
  - host: backend.local
    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: backend-service
            port:
              number: 80
